fix .hero__covers

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -99,7 +99,7 @@ a {
   height: 310px;
   white-space: nowrap;
   text-align: center;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .hero__cover {
